# whale-land-VLM

./: .gitignore  FRONTEND_SUMMARY.md  README.md  USAGE.md
backend/: .env.example  .gitignore  README.md  app.py  requirements.txt  run.py
backend/api/: routes.py
backend/app/: main.py
backend/app/api/: chat_routes.py  image_routes.py  item_routes.py  routes.py  session_routes.py
backend/app/config/: config.py  police_back.yaml  session.yaml
backend/app/src/: GameMaster.py  llm_response.py  recognize_from_vlm.py
backend/config/: taoist.yaml
backend/src/: GameMaster.py  __init__.py  llm_response.py  parse_json.py  recognize_from_image_glm.py  resize_img.py
backend/test/: 0630discuss_prompt.txt  0801_new_frontal_prompt.md  feature_consistency_test.py  hf_mirror_test.py  mirror_example.py  record_and_trans.py  test_feature_simple_consistency_test.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: Chat.css  Chat.tsx  (+4 more)
gradio_demo/: .env.example  .gitignore  LICENSE  demo_info.md  gradio_with_state.py  pyqt_interface.py  requirements.txt
gradio_demo/config/: image_master.yaml  image_master_mirror.yaml  police.yaml  pyqt_config.yaml
gradio_demo/openvino_backend/: docker-compose.yaml
gradio_demo/src/: GameMaster.py  ImageMaster.py  fishTTS.py  llm_response.py  parse_json.py  resize_img.py
gradio_demo/test/: 0728_class_requirements.txt  gradio_interface.py  pyproject.toml  test_game_master.py  test_image_master.py  test_playground.py  test_vlm.py  trans_image2html.py
(+3 files in other folders)
